<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="@string/lorem_ipsum"
            android:layout_width="350dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/calculate_your_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

        <TextView
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/payment_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:enabled="false"
            android:hint="@string/_30_000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/loan_duration"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:enabled="false"
                android:hint="@string/select_your_duration"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/upfront_payment"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/_2_000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/refund"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/_1_400"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>